--- a/src/info.html
+++ b/src/info.html
@@ -8,9 +8,61 @@
     </style>
     <title>Calculator</title>
 </head>
-<body>
+<body style="background-color: #c2ffe5; color: #000000; font-family: proxima-soft, Proxima Soft, Proxima Nova Soft, Helvetica, Arial, sans-serif;">
     <div>
-        <h1>Привет, это инструкция к калькулятору!</h1>
+        <h1 style="text-align: center;">Привет, это инструкция к калькулятору!</h1>
+    </div>
+    <div style=" padding-left: 20px;"> 
+        <div style="margin: 10px;">
+            <h3>
+                Сборка:
+            </h3>
+            <p>
+                ● make all - запуск калькулятора и открытие исполняемого объекта<br>
+                ● make install - установка приложения калькулятор<br>
+                ● make unistall - удаление приложения<br>
+                ● make clean - очистка всех ненужных файлов<br>
+                ● make dist - создание архива<br>
+                ● make test - проверка функционала калькулятора с помощью тестов<br>
+                ● make gcov_report - отображение покрытия кода unit тестами<br>
+                ● make dvi - вывод паспорта проекта<br>
+            </p>
+        </div>
+
+        <div style="margin: 10px;">
+            <h3>
+                Функционал калькулятора:
+            </h3>
+            <p>
+                ● арифметика:
+                <p style="padding-left: 50px;">
+                    сложение (+)<br>
+                    вычитание (-)<br>
+                    умножение (*)<br>
+                    деление (/)<br>
+                </p>
+                ● функции:
+                <p style="padding-left: 50px;">
+                    остаток от деления (mod)<br>
+                    корень (sqrt)<br>
+                    возведение в степень (^)<br>
+                    логарифм (log)<br>
+                    натуральный логарифм (ln)<br>
+                    синус (sin)<br>
+                    косинус (cos)<br>
+                    тангенс (tan)<br>
+                    арксинус(функция обратная синуса) (asin)<br>
+                    арккосинус(функция обратная косинуса) (acos)<br>
+                    арктангенс(функция обратная тангенса) (atan)<br>
+                </p>
+                    
+                ● вычисление выражения с X и построение графика заданной функции<br>
+            </p>
+            <h3>
+                Кроме того, присутствуют кредитный и депозитный калькуляторы
+            </h3>
+        </div>
+
     </div>
 </body>
 </html>
